# uk-public-services-imputation

./: .buildinfo  .gitignore  Makefile  analysis.html  analysis.ipynb  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: code_changes.yaml  pr_code_changes.yaml
_sources/: analysis.ipynb
dashboard/: README.md  data.js  generate_all_analyses.py  generate_chart.py  index.html  update_data.py
dashboard/data/: by_age_group.json  by_household_type.json  nhs_services_by_decile.json
dashboard/react-dashboard/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
dashboard/react-dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/react-dashboard/components/: ChartTab.tsx
dashboard/react-dashboard/public/: index.html
dashboard/react-dashboard/public/data/: by_household_type.json  by_income_decile.json  by_region.json
dashboard/react-dashboard/src/: App.css  App.js  index.js
dashboard/react-dashboard/src/components/: ChartTab.js  PolicyEngineHeader.js  UKMapTab.js
docs/: _toc.yml  analysis.ipynb  intro.md
src/uk_public_services_imputation/: __init__.py  impute_nhs_consumption.py  input_data.py  main.py  nhs_usage.csv  qrf.py
src/uk_public_services_imputation/etb/: impute_services.py
src/uk_public_services_imputation/nhs/: impute_nhs_consumption.py
tests/: test_main.py
